--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1285,7 +1285,7 @@ a.active {
 /* Clients */
 
 #clients p {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
